--- a/index.html
+++ b/index.html
@@ -5,8 +5,78 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header>
+      <a href="#">
+        <img src="#" alt="Логотип магазина «Девайс»">
+      </a>
+      <!-- Здесь будет input -->
+      <ul>
+        <li><button type="button">Войти</button></li>
+        <li><button type="button">Сравнить</button></li>
+        <li><button type="button">Корзина</button></li>
+      </ul>
+      <ul>
+        <li><a href="#">Каталог товаров</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Гарнтия</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+    </header>
+    <main>
+      <h1>Магазин «Девайс»</h1>
+      <section>
+        <h2>О нас</h2>
+        <ul>
+          <li>
+            <p>
+              Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас
+            </p>
+          </li>
+          <li>
+            <p>
+              Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:
+            </p>
+            <ul>
+              <li><a href="#">Деловые Линии</a></li>
+              <li><a href="#">Автотрейдинг</a></li>
+              <li><a href="#">ЖелДорЭкспедиция</a></li>
+            </ul>
+          </li>
+        </ul>
+        <a href="#">Подробнее о нас</a>
+      </section>
+      <section>
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+        <figure>
+          <a href="#">
+            <img src="#" alt="Карта расположения нашего офиса">
+          </a>
+        </figure>
+        <a href="#">Связаться с нами</a>
+      </section>
+    </main>
+    <footer>
+      <a href="#">
+        <img src="#" alt="Логотип магазина «Девайс»">
+      </a>
+      <ul>
+        <li><button type="button">Войти</button></li>
+        <li><button type="button">Сравнить</button></li>
+        <li><button type="button">Корзина</button></li>
+      </ul>
+      <ul>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Гарнтия</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+      <p>г.Москва,ул.Строителей,15</p>
+      <p>Тел.: +7(495)495-95-95</p>
+      <ul>
+        <li><a href="#">Вконтакте</a></li>
+        <li><a href="#">Фейсбук</a></li>
+        <li><a href="#">Инстаграм</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
