--- a/catalog.html
+++ b/catalog.html
@@ -11,9 +11,9 @@
       </a>
       <!-- Здесь будет input -->
       <ul>
-        <li><button type="button">Выйти</button></li>
-        <li><button type="button">Сравнить</button></li>
-        <li><button type="button">Корзина</button></li>
+        <li><a href="#">Войти</a></li>
+        <li><a href="#">Сравнить</a></li>
+        <li><a href="#">Корзина</a></li>
       </ul>
       <ul>
         <li><a href="#">Каталог товаров</a></li>
@@ -23,16 +23,16 @@
       </ul>
     </header>
     <main>
-      <h1>Моноподы для селфи</h1>
+      <h2>Моноподы для селфи</h2>
       <ul>
         <li><a href="#">Главная</a></li>
         <li><a href="#">Каталог таваров</a></li>
         <li><a>Моноподы для селфи</a></li>
       </ul>
-      <section>
+      <div>
         <h2>Фильтр</h2>
         <!-- Здесь будет форма -->
-      </section>
+      </div>
       <section>
         <h2>Список товаров</h2>
         <ul>
@@ -102,9 +102,9 @@
         <img src="#" alt="Логотип магазина «Девайс»">
       </a>
       <ul>
-        <li><button type="button">Выйти</button></li>
-        <li><button type="button">Сравнить</button></li>
-        <li><button type="button">Корзина</button></li>
+        <li><a href="#">Войти</a></li>
+        <li><a href="#">Сравнить</a></li>
+        <li><a href="#">Корзина</a></li>
       </ul>
       <ul>
         <li><a href="#">Доставка</a></li>
@@ -120,4 +120,4 @@
       </ul>
     </footer>
   </body>
-</html>  
+</html>
