--- a/index.html
+++ b/index.html
@@ -11,37 +11,37 @@
       </a>
       <!-- Здесь будет input -->
       <ul>
-        <li><button type="button">Войти</button></li>
-        <li><button type="button">Сравнить</button></li>
-        <li><button type="button">Корзина</button></li>
+        <li><a href="#">Войти</a></li>
+        <li><a href="#">Сравнить</a></li>
+        <li><a href="#">Корзина</a></li>
       </ul>
       <ul>
-        <li><a href="#">Каталог товаров</a></li>
+        <li>
+          <a href="#">Каталог товаров</a>
+          <ul>
+            <li><a href="#">Виртуальная реальность</a></li>
+            <li><a href="#">Моноподы для селфи</a></li>
+            <li><a href="#">Экшн-камеры</a></li>
+            <li><a href="#">Фитнес-браслеты</a></li>
+            <li><a href="#">Умные часы</a></li>
+            <li><a href="#">Квадрокоптеры</a></li>
+          </ul>
+        </li>
         <li><a href="#">Доставка</a></li>
         <li><a href="#">Гарнтия</a></li>
         <li><a href="#">Контакты</a></li>
       </ul>
     </header>
     <main>
-      <h1>Магазин «Девайс»</h1>
+      <h1>«Девайс» - онлайн магазин электроники</h1>
       <section>
         <h2>О нас</h2>
+        <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
         <ul>
-          <li>
-            <p>
-              Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас
-            </p>
-          </li>
-          <li>
-            <p>
-              Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:
-            </p>
-            <ul>
-              <li><a href="#">Деловые Линии</a></li>
-              <li><a href="#">Автотрейдинг</a></li>
-              <li><a href="#">ЖелДорЭкспедиция</a></li>
-            </ul>
-          </li>
+          <li><a href="#">Деловые Линии</a></li>
+          <li><a href="#">Автотрейдинг</a></li>
+          <li><a href="#">ЖелДорЭкспедиция</a></li>
         </ul>
         <a href="#">Подробнее о нас</a>
       </section>
@@ -61,9 +61,9 @@
         <img src="#" alt="Логотип магазина «Девайс»">
       </a>
       <ul>
-        <li><button type="button">Войти</button></li>
-        <li><button type="button">Сравнить</button></li>
-        <li><button type="button">Корзина</button></li>
+        <li><a href="#">Войти</a></li>
+        <li><a href="#">Сравнить</a></li>
+        <li><a href="#">Корзина</a></li>
       </ul>
       <ul>
         <li><a href="#">Доставка</a></li>
