--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <a href="#">
-        <img src="#" alt="Логотип магазина «Девайс»">
+        <img src="img/logo.svg" width="163" height="35" alt="Логотип магазина «Девайс»">
       </a>
       <!-- Здесь будет input -->
       <ul>
@@ -16,7 +16,7 @@
         <li><a href="#">Корзина</a></li>
       </ul>
       <ul>
-        <li><a href="#">Каталог товаров</a></li>
+        <li><a href="catalog.html">Каталог товаров</a></li>
         <li><a href="#">Доставка</a></li>
         <li><a href="#">Гарнтия</a></li>
         <li><a href="#">Контакты</a></li>
@@ -25,8 +25,8 @@
     <main>
       <h2>Моноподы для селфи</h2>
       <ul>
-        <li><a href="#">Главная</a></li>
-        <li><a href="#">Каталог таваров</a></li>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="catalog.html">Каталог таваров</a></li>
         <li><a>Моноподы для селфи</a></li>
       </ul>
       <div>
@@ -44,7 +44,7 @@
             </h3>
             <p>
               <a href="#">
-                <img src="#" alt="Любительская селфи-палка">
+                <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
               </a>
             </p>
             <p>
@@ -59,7 +59,7 @@
             </h3>
             <p>
               <a href="#">
-                <img src="#" alt="Профессиональная селфи-палка">
+                <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
               </a>
             </p>
             <p>
@@ -74,7 +74,7 @@
             </h3>
             <p>
               <a href="#">
-                <img src="#" alt="Непотопляемая селфи-палка">
+                <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
               </a>
             </p>
             <p>
@@ -88,7 +88,7 @@
               </a>
             </h3>
             <p>
-              <img src="#" alt="Селфи-палка «Следуй за мной»">
+              <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
             </p>
             <p>
               4900 руб.
@@ -99,7 +99,7 @@
     </main>
     <footer>
       <a href="#">
-        <img src="#" alt="Логотип магазина «Девайс»">
+        <img src="img/logo.svg" width="163" height="35" alt="Логотип магазина «Девайс»">
       </a>
       <ul>
         <li><a href="#">Войти</a></li>
