--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <a href="#">
-        <img src="#" alt="Логотип магазина «Девайс»">
+        <img src="img/logo.svg" width="163" height="35" alt="Логотип магазина «Девайс»">
       </a>
       <!-- Здесь будет input -->
       <ul>
@@ -17,7 +17,7 @@
       </ul>
       <ul>
         <li>
-          <a href="#">Каталог товаров</a>
+          <a href="catalog.html">Каталог товаров</a>
           <ul>
             <li><a href="#">Виртуальная реальность</a></li>
             <li><a href="#">Моноподы для селфи</a></li>
@@ -49,8 +49,8 @@
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
         <figure>
-          <a href="#">
-            <img src="#" alt="Карта расположения нашего офиса">
+          <a href="img/map.jpg">
+            <img src="img/map.jpg" alt="Карта расположения нашего офиса">
           </a>
         </figure>
         <a href="#">Связаться с нами</a>
@@ -58,7 +58,7 @@
     </main>
     <footer>
       <a href="#">
-        <img src="#" alt="Логотип магазина «Девайс»">
+        <img src="img/logo.svg" alt="Логотип магазина «Девайс»">
       </a>
       <ul>
         <li><a href="#">Войти</a></li>
