--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
         <figure>
           <a href="img/map.jpg">
-            <img src="img/map.jpg" alt="Карта расположения нашего офиса">
+            <img src="img/map.jpg" alt="г.Москва,ул.Строителей,15">
           </a>
         </figure>
         <a href="#">Связаться с нами</a>
