--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <a href="#">
+      <a href="index.html">
         <img src="img/logo.svg" width="163" height="35" alt="Логотип магазина «Девайс»">
       </a>
       <!-- Здесь будет input -->
@@ -98,7 +98,7 @@
       </section>
     </main>
     <footer>
-      <a href="#">
+      <a href="index.html">
         <img src="img/logo.svg" width="163" height="35" alt="Логотип магазина «Девайс»">
       </a>
       <ul>
