--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </ul>
     </header>
     <main>
-      <h1>«Девайс» - онлайн магазин электроники</h1>
+      <h1 class="visually-hidden">«Девайс» - онлайн магазин электроники</h1>
       <section>
         <h2>О нас</h2>
         <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас</p>
@@ -49,7 +49,7 @@
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
         <figure>
-          <a href="img/map.jpg">
+          <a href="#">
             <img src="img/map.jpg" alt="г.Москва,ул.Строителей,15">
           </a>
         </figure>
@@ -78,5 +78,29 @@
         <li><a href="#">Инстаграм</a></li>
       </ul>
     </footer>
+
+    <section>
+      <h2 class="visually-hidden">Напишите нам</h2>
+      <form class="" action="index.html" method="post">
+        <p>
+          <label for="user-name">Ваше имя:</label>
+          <input id="user-name" type="text" name="feedback-name" placeholder="Имя Фамилия">
+        </p>
+        <p>
+          <label for="user-mail">Ваш e-mail:</label>
+          <input id="user-mail" type="text" name="feedback-mail" placeholder="email@example.com">
+        </p>
+        <p>
+          <label for="user-message">Текст письма:</label>
+          <textarea id="user-message" name="message" rows="8" cols="80" placeholder="В свободной форме"></textarea>
+        </p>
+        <button type="submit" name="button">Отправить</button>
+      </form>
+      <button type="button">Закрыть</button>
+    </section>
+    <section>
+
+    </section>
+
   </body>
 </html>
