--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
         <figure>
           <a href="#">
-            <img src="img/map.jpg" alt="г.Москва,ул.Строителей,15">
+            <img src="img/map.jpg" alt="г.Москва, ул.Строителей, 15">
           </a>
         </figure>
         <a href="#">Связаться с нами</a>
@@ -81,7 +81,7 @@
 
     <section>
       <h2 class="visually-hidden">Напишите нам</h2>
-      <form class="" action="index.html" method="post">
+      <form action="#" method="post">
         <p>
           <label for="user-name">Ваше имя:</label>
           <input id="user-name" type="text" name="feedback-name" placeholder="Имя Фамилия">
@@ -94,12 +94,15 @@
           <label for="user-message">Текст письма:</label>
           <textarea id="user-message" name="message" rows="8" cols="80" placeholder="В свободной форме"></textarea>
         </p>
-        <button type="submit" name="button">Отправить</button>
+        <button type="submit">Отправить</button>
       </form>
       <button type="button">Закрыть</button>
     </section>
     <section>
-
+      <h2 class="visually-hidden">Как до нас добраться</h2>
+      <img src="img/map-big.jpg" width="960" height="559" alt="Офис компании
+      по адресу г.Москва, ул.Строителей, 15">
+      <button type="button">Закрыть</button>
     </section>
 
   </body>
