--- a/catalog.html
+++ b/catalog.html
@@ -31,28 +31,28 @@
       </ul>
       <div>
         <h2>Фильтр</h2>
-        <form action="index.html" method="get">
+        <form action="http://echo.htmlacademy.ru" method="get">
           <fieldset>
             <legend>Цвет</legend>
             <ul>
               <li>
-                <input type="checkbox" id="filter-black" name="color-black" checked>
+                <input type="checkbox" id="filter-black" name="color" value="black" checked>
                 <label for="filter-black">Черный</label>
               </li>
               <li>
-                <input type="checkbox" id="filter-white" name="color-white">
+                <input type="checkbox" id="filter-white" name="color" value="white">
                 <label for="filter-white">Белый</label>
               </li>
               <li>
-                <input type="checkbox" id="filter-blue" name="color-blue" checked>
+                <input type="checkbox" id="filter-blue" name="color" value="blue" checked>
                 <label for="filter-blue">Синий</label>
               </li>
               <li>
-                <input type="checkbox" id="filter-red" name="color-red" checked>
+                <input type="checkbox" id="filter-red" name="color" value="red" checked>
                 <label for="filter-red">Красный</label>
               </li>
               <li>
-                <input type="checkbox" id="filter-pink" name="color-pink">
+                <input type="checkbox" id="filter-pink" name="color" value="pink">
                 <label for="filter-pink">Розовый</label>
               </li>
             </ul>
@@ -61,11 +61,11 @@
             <legend>Bluetooth</legend>
             <ul>
               <li>
-                <input type="radio" id="filter-bluetooth-yes" name="yes" checked>
+                <input type="radio" id="filter-bluetooth-yes" name="bluetooth" value="yes" checked>
                 <label for="filter-bluetooth-yes">Есть</label>
               </li>
               <li>
-                <input type="radio" id="filter-bluetooth-no" name="no">
+                <input type="radio" id="filter-bluetooth-no" name="bluetooth" value="no">
                 <label for="filter-bluetooth-no">Нет</label>
               </li>
             </ul>
