--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <section>
       <h2 class="visually-hidden">Напишите нам</h2>
-      <form action="#" method="post">
+      <form action="https://echo.htmlacademy.ru" method="post">
         <p>
           <label for="user-name">Ваше имя:</label>
           <input id="user-name" type="text" name="feedback-name" placeholder="Имя Фамилия">
